--- a/states/journal/journal.html
+++ b/states/journal/journal.html
@@ -18,6 +18,23 @@
     </ol>
     <hr />
   -->
+  <h2 class="date">Tuesday June 6th, 2017</h2>
+  <h4 class="sleep">Slept: 5 hours</h4><br><br>
+  <h3 class="subtitle">Afer deploying this app to Heroku, began to rethink it's entire configuration.
+  Should the nav directives be reconfigured? What about the homepage? Should there be drop-down categories for Front-end backend, etc. Codedrops has a freakin' nice collection.
+I'm about to get back into GSAP in prep for a foray into some light animation keeping in mind "less is more". Cooked an amazing pork with a red-wine reduction--garlicky, dijonny, mushroomy goodness. Ugh... back to gsap!</h3>
+
+  <br>
+  <h3>To do:</h3>
+  <ol class="todo">
+    <li>re-familiarization with GSAP's basics.</li>
+    <li>If I have time... anime.js--though, I need to bone up on the raw javascript--(so it's premature, I guess: a learning anti-pattern)</li>
+  </ol><br>
+  <h3>Done: </h3>
+  <ol class="done">
+    <li>Hofstadtler's Law😒</li>
+  </ol>
+  <hr />
   <h2 class="date">Monday June 5th, 2017</h2>
   <h4 class="sleep">Slept: 6 hours</h4><br><br>
   <h3 class="subtitle">Organized codepen profile. It's a bit rough but a few things of interest. <a href="https://codepen.io/beau_dev/" target="_blank">CodePen Link</a> Got very far in Ang Directives. It's actually fun tooling with the scope sharing. --Still getting in the the real use-cases beyond simply manipulating classes on the element. Will continue today. Let's get started.</h3>
@@ -347,8 +364,6 @@
 <li>First review of node.js --> all pretty straightforward.</li>
 {Was an extremely busy day today with very little sleep 😓 }
 </ol>
-
-<hr>
 
     <hr>
     <h2 class="date">Thursday May 11th, 2017</h2>
