--- a/states/misc/misc.html
+++ b/states/misc/misc.html
@@ -13,6 +13,17 @@ moodGreet("Ben", "Hi.")
 -->
     <pre>
     <!--entire page pre-->
+    <div class="lt-frame w60">
+      <h4 class="chtitle">daveatron2000's site fonts</h4>
+      I like me these fonts
+<img class="w30" src="./img/daveatron2000.png" alt="">
+<pre class="plain-frame0 w40 ctr">
+A close approximation from google-fonts:
+  font-family: 'News Cycle', sans-serif;
+  font-family: 'Roboto', sans-serif;</pre>
+<h3 class="chtitle paleY"><span><</span>link href="https://fonts.googleapis.com/css?family=Roboto:100" rel="stylesheet"></h3>
+
+    </div>
     <div class="simple-frame"><h3 class="chtitle dkblue">How to set up defaults in a function using "||" operator</h3>
 <pre class="prettyprint">
 function moodGreet(name, greet, mood) {
