--- a/states/gsap/gsap.html
+++ b/states/gsap/gsap.html
@@ -4,11 +4,14 @@
   <div class="gsap-entry entry">
     <pre>
 <!--entire page pre-->
-<div class="simple-frame2"><h3 class="chtitle dkblue">First, The Set-Up...</h3>
+<h3 class="chtitle dkblue">First, The Set-Up...</h3>
+<div class="ctr shadn brdr-w ltbg ivr w50 sm">
 <span><</span>script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"><span></</span>script>
+
 <span><</span>script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.1/TweenMax.min.js"><span></</span>script>
 
-</div>
+</div><br>
+A simple example...
 <div class="col-2"><pre class="prettyprint w40">
 (function($) {
 
@@ -24,24 +27,79 @@ method on <code><i class="ltgreen">TMax</i>(<i class="orange">selector</i>,<i cl
 
 
 </pre>
-</div>
-A bit of easing:
-<pre class="brdr-w w50">
-  var img = $('img'),
-  tm = TweenMax;
+</div><hr>
+<h1 class="chtitle">Anatomy of a Greensock ease:</h1>
+<h2 class="chtitle pastpink">TweenLite.from(img, 1, {x: -200, <b class="paleY">ease</b>:<span class="ltgreen">Power4</span><b class="dkred">.easeOut</b>});</h2>
+<div class="col-3 dk-frame">
+  <pre><b class="fuch">I.</b>
 
-  tm.to(img, 3, {autoAlpha: 0, x: 200, ease:Power4.easeIn});
+POWER refers to duration
+and goes from Power0 ~ Power4
+
+
+  </pre>
+<pre>
+
+<b class="fuch">II.</b>
+easeNone
+easeIn
+easeOut
+easeInOut
+Back.easeOut
+Bounce.easeOut
+Circ.easeOut
+Elastic.easeOut
+Expo.easeOut
+Sine.easeOut</pre>
+  <pre><b class="fuch">III.</b>
+The following three are tricky.
+
+RoughEase
+Slomo
+SteppedEase
+
+These can be tinkered with easily @
+<a href="https://greensock.com/ease-visualizer" target="_blank">Greensock's ease visualizer</a>
 </pre>
+</div>
+💡NOTA BENE: roughEase would be great to animate a flourescent light cutting out and blinking back on!
 
+<hr>
+<h1 class="chtitle">Methods of Greensock:</h1>
+<h2 class="chtitle pastpink">TweenMax<span class="pastY">.from</span>(header, 3, {autoAlpha: 0, x: 200, ease:Elastic.easeIn});</h2>
+<div class="framed6">
+<div class="col-2 simple-frame2">
+  <pre class="paleY">.to()
+.from()
+.fromTo()
+.set()
+autoAlpha
 
-
+</pre>
+<pre class="wh">
+specifies end point
+specifies start point
+reqires two values for start and end<b class="ltred">*</b>
+exactly like .css() property setting (no anim)
+opacity
+</pre>
+</div>
+<b class="purp">.fromTo()</b><pre class="prettyprint w20">
+tm.fromTo(img, 3,
+ { x: 200, y: -300 },
+ { x: -200, y: 500 });
+</pre>
+<b class="purp">.set()</b><pre class="prettyprint w30">
+// Remove timing val
+tm.set(img,{ x: 200, y: -300 });
+</pre>
+the <span class="paleY">delay</span>s here render this in succession
+<div class="plain-frame0 ctr w30">  tm.from(h1, 3, { x: 200, y: -300 });
+  tm.from(h3, 1, { x:-500, <span class="paleY">delay</span>: 4 });
+  tm.from(h2, 1, { x:-500, <span class="paleY">delay</span>: 3 });
 </div>
 
-<div class="framed6">
-<h3 class="chtitle dkred">gsap Title</h3>
-
-
-  <div class="col-2 simple-frame2">The problem (or BUG) is: that second 'this'
+  <div class="framed8">The problem (or BUG) is: that second 'this'
   <pre class="prettyprint w20">
   //code column
 
