--- a/states/journal/journal.html
+++ b/states/journal/journal.html
@@ -3,8 +3,8 @@
   <div class="journal-entry entry">
 
     <!--
-    <h2 class="date">Friday May 19th, 2017</h2>
-    <h4 class="sleep">Slept: 4 hours</h4><br><br>
+    <h2 class="date">Day June NUMth, 2017</h2>
+    <h4 class="sleep">Slept: 7 hours</h4><br><br>
     <h3 class="subtitle">Placeholder</h3>
 
     <br>
@@ -18,6 +18,23 @@
     </ol>
     <hr />
   -->
+  <h2 class="date">Day June 7th, 2017</h2>
+  <h4 class="sleep">Slept: 7.5 hours</h4><br><br>
+  <h3 class="subtitle">Well into getting through GSAP fundamentals. Progress is fluid--I may have a block with the codedrops example implementation. Specifically substituting anime.js with gsap easeings etc. Will work in a pen for it.</h3>
+
+  <br>
+  <h3>To do:</h3>
+  <ol class="todo">
+    <li>Finish the GSAP revisit</li>
+    <li>Do a mockup of a fancy-schmancy nav --pencil/paper -> photoshop ->codepen ->angular -> 'git push!'</li>
+
+  </ol><br>
+  <h3>Done: </h3>
+  <ol class="done">
+    <li>PLACEHOLDERDONETASKS</li>
+  </ol>
+  <hr />
+
   <h2 class="date">Tuesday June 6th, 2017</h2>
   <h4 class="sleep">Slept: 5 hours</h4><br><br>
   <h3 class="subtitle">Afer deploying this app to Heroku, began to rethink it's entire configuration.
@@ -32,7 +49,7 @@ I'm about to get back into GSAP in prep for a foray into some light animation ke
   </ol><br>
   <h3>Done: </h3>
   <ol class="done">
-    <li>Hofstadtler's Law😒</li>
+    <li>😒 <a href="https://en.wikipedia.org/wiki/Hofstadter%27s_law">Hofstadter's Law </a>😒</li>
   </ol>
   <hr />
   <h2 class="date">Monday June 5th, 2017</h2>
