--- a/states/journal/journal.html
+++ b/states/journal/journal.html
@@ -31,7 +31,11 @@
   </ol><br>
   <h3>Done: </h3>
   <ol class="done">
-    <li>PLACEHOLDERDONETASKS</li>
+    <li>Lots of GSAP!</li>
+<div class="codepen w50">
+  <p data-height="286" data-theme-id="dark" data-slug-hash="dRYJjm" data-default-tab="js,result" data-user="beau_dev" data-embed-version="2" data-pen-title="emoticon-pool" class="codepen">See the Pen <a href="https://codepen.io/beau_dev/pen/dRYJjm/">emoticon-pool</a> by Beau_dev (<a href="https://codepen.io/beau_dev">@beau_dev</a>) on <a href="https://codepen.io">CodePen</a>.</p>
+</div>
+
   </ol>
   <hr />
 
