--- a/states/journal/journal.html
+++ b/states/journal/journal.html
@@ -18,9 +18,24 @@
     </ol>
     <hr />
   -->
-  <h2 class="date">Day June 7th, 2017</h2>
+  <h2 class="date">Thursday June 8th, 2017</h2>
+  <h4 class="sleep">Slept: 7 hours</h4><br><br>
+  <h3 class="subtitle">Slept well. Thought of a fun idea of landing page as laundry room with washing machines and dryers with icons swishing and spinning in them. .on('click') door opens, icon drops out...
+  <br />I'm 3/4 done with the gasp lectures and exercises...(timelinemax) --But it's early days, I'm still getting into the meat of it all. --But it's very satisfying. I'm reviewing lots of what I've done on this app and it has proven to be and excellent way to ramp up my sill-set.</h3>
+
+  <br>
+  <h3>To do:</h3>
+  <ol class="todo">
+    <li>GSAP Timelines, callbacks, continue with codepen projects.</li>
+  </ol><br>
+  <h3>Done: </h3>
+  <ol class="done">
+    <li>Gone through GSAP callbacks, Staggering with multiple properties(attributes) --Very cool stuff!</li>
+  </ol>
+  <hr />
+  <h2 class="date">Wednesday June 7th, 2017</h2>
   <h4 class="sleep">Slept: 7.5 hours</h4><br><br>
-  <h3 class="subtitle">Well into getting through GSAP fundamentals. Progress is fluid--I may have a block with the codedrops example implementation. Specifically substituting anime.js with gsap easeings etc. Will work in a pen for it.</h3>
+  <h3 class="subtitle">Well into getting through GSAP fundamentals. Progress is fluid--I may have a block with the codedrops example implementation. Specifically substituting anime.js with gsap easings etc. Will work in a pen for it.</h3>
 
   <br>
   <h3>To do:</h3>
@@ -33,7 +48,7 @@
   <ol class="done">
     <li>Lots of GSAP!</li>
 <div class="codepen w50">
-  <p data-height="286" data-theme-id="dark" data-slug-hash="dRYJjm" data-default-tab="js,result" data-user="beau_dev" data-embed-version="2" data-pen-title="emoticon-pool" class="codepen">See the Pen <a href="https://codepen.io/beau_dev/pen/dRYJjm/">emoticon-pool</a> by Beau_dev (<a href="https://codepen.io/beau_dev">@beau_dev</a>) on <a href="https://codepen.io">CodePen</a>.</p>
+  <p data-height="286" data-theme-id="dark" data-slug-hash="dRYJjm" data-default-tab="js,result" data-user="beau_dev" data-embed-version="2" data-pen-title="emoticon-pool" class="codepen">See the Pen <a target="_blank" href="https://codepen.io/beau_dev/pen/dRYJjm/">emoticon-pool</a></p>
 </div>
 
   </ol>
@@ -73,7 +88,7 @@ I'm about to get back into GSAP in prep for a foray into some light animation ke
     <li>codejournal readme.md √</li>
   </ol>
   <hr />
-  <h2 class="date">Sunday June 5th, 2017</h2>
+  <h2 class="date">Sunday June 4th, 2017</h2>
   <h4 class="sleep">Slept: 4 hours</h4><br><br>
   <h3 class="subtitle">Back to Angular. Methodically, deliberately, painstakingly going through--soup-to-nuts--what I don't know cold. Using 3 or 4 sources. John Lindquist, Matt Frisbie (O'Reilly). I've already discovered much about scope inheritance, breaking scope, etc. Spoke to @bendhalpern today about svg animated characters datavis app. Incredible conversation.</h3>
   <br>
