--- a/states/journal/journal.html
+++ b/states/journal/journal.html
@@ -31,6 +31,7 @@
   <h3>Done: </h3>
   <ol class="done">
     <li>Gone through GSAP callbacks, Staggering with multiple properties(attributes) --Very cool stuff!</li>
+    <li>Learned (FINALLY!!) how to do a loader in SVG--blocking browserpaint while animation plays multiple times.</li>
   </ol>
   <hr />
   <h2 class="date">Wednesday June 7th, 2017</h2>
