--- a/states/journal/journal.html
+++ b/states/journal/journal.html
@@ -18,6 +18,28 @@
     </ol>
     <hr />
   -->
+  <h2 class="date">Day June 9th, 2017</h2>
+  <h4 class="sleep">Slept: 6 hours</h4><br><br>
+  <h3 class="subtitle">Exhausted but I'm still in the game. Cannot stop thinking of this codedrops demo <a href="https://tympanus.net/Development/FolderPreviewIdeas/" target="_blank">and how I'd make it differently.</a> It kind of haunts me. <br>
+  Ok, onward and upward. I've completed the runthrough of GSAP's timeline basics and am resonably proficient. It is frickin' cool. <br>
+
+  <br />A dev-ops guy once advised me, "Concentrate on one thing. A small schema...just a couple of tables. Hook up those endpoints and hit them from the front-end. Keep it small." It was good advice.
+  All my life I've been fighting this appetite to learn all the things vs focus on one thing... At this point, I have no time to speculate which approach is better.<br /><br>
+
+  I just have to believe that cycling through, methodically, a list of tech--each, more or less--working in concert with the others--will deepen my grasp of each individually and the ecosystem as a whole. <br /><br />The joy in the immediate process is confirmed. So, with let's hope for exponential dividends.<br><br><code>var result*=;</code></h3>
+
+  <br>
+  <h5>P.S.: Here's a nice article on video embeds with intrinsic-ratio <a href="https://alistapart.com/article/creating-intrinsic-ratios-for-video">from A List Apart</a> #RWD</h5>
+  <br>
+  <h3>To do:</h3>
+  <ol class="todo">
+    <li>Full re-review of the GSAP methods and timeline utilities.</li>
+  </ol><br>
+  <h3>Done: </h3>
+  <ol class="done">
+    <li>PLACEHOLDERDONETASKS</li>
+  </ol>
+  <hr />
   <h2 class="date">Thursday June 8th, 2017</h2>
   <h4 class="sleep">Slept: 7 hours</h4><br><br>
   <h3 class="subtitle">Slept well. Thought of a fun idea of landing page as laundry room with washing machines and dryers with icons swishing and spinning in them. .on('click') door opens, icon drops out...
