--- a/states/journal/journal.html
+++ b/states/journal/journal.html
@@ -37,7 +37,8 @@
   </ol><br>
   <h3>Done: </h3>
   <ol class="done">
-    <li>PLACEHOLDERDONETASKS</li>
+    <li>Studied Addy Osmani's jsconf presentation on loading and implemented it! <a href="https://youtu.be/7vUs5yOuv-o">Link Here</a> it's brilliant.</li>
+    <li>webpagetest.org/easy <a target="_blank" href="https://www.webpagetest.org/easy">This is my jam</a>  #perfmatters</li>
   </ol>
   <hr />
   <h2 class="date">Thursday June 8th, 2017</h2>
