--- a/states/journal/journal.html
+++ b/states/journal/journal.html
@@ -39,6 +39,7 @@
   <ol class="done">
     <li>Studied Addy Osmani's jsconf presentation on loading and implemented it! <a href="https://youtu.be/7vUs5yOuv-o">Link Here</a> it's brilliant.</li>
     <li>webpagetest.org/easy <a target="_blank" href="https://www.webpagetest.org/easy">This is my jam</a>  #perfmatters</li>
+    <li>Did a pretty comprehensive guide on svg vs. html boxes animations with GSAP</li>
   </ol>
   <hr />
   <h2 class="date">Thursday June 8th, 2017</h2>
