work on home.html

--- a/states/home/home.html
+++ b/states/home/home.html
@@ -1,4 +1,43 @@
 <aside><span class="rot90">{{state}}</span></aside>
-<div class="home-entry entry">
+<div class="home-container">
+<div class="home-entry">
+<pre>
+<!-- pre for all -->
+<div class="right debossed-dk-frame thin txt-right"><h1 class="right dkred3">.this()</h1>
+<p class="dkgrey2">practical notes, code and advice distilled from myriad sorces in web development. It is a "living-document" to which I contribute daily as a resource and reference to others.
+</div>
+<br><br>
+<div class="right debossed-dk-frame thin txt-right"><h1 class="right dkred3">.attr()</h1>
+<p class="dkgrey2">many examples originate from the sources cited.
+proper attribution is made as I iterate over this site--editing and grooming it's contents on a regular basis.
+<br>
+most are lesson examples I've saved applying the valuable lessons as I've learned.</p>
+</div>
+<br><br>
+<div class="right debossed-dk-frame thin txt-right"><h1 class="right dkred3">TL;DR</h1>
+<h5 class="dkgrey2">This is a fan-site for web-code. And a way to give back to the community that has been so generous to me with advice and guidance over the last year or so.
+
+My intent is to motivate and to help others who--like me--struggle with learning new and difficult tech on a daily basis.</h5>
+</div>
+
+
+
+
+
+
+
+
+
+<h6 class="sm chtitle">No claim of copyright nor of expertise nor creativity for that matter. :) --On the contrary, please use it in your own study! Follow the exercises & the links provided! Be patient and painstaking. <br>Tweet @ me <span class=""><a target="_blank" href="https://twitter.com/beau_dev">🐦</a></span></h6>
+</pre>
+
+
+
+
+
+
 
 </div>
+<!-- home-entry end -->
+</div>
+<!-- home container end -->
