adds grid views and one complete entry

--- a/directive_templates/navdirective.html
+++ b/directive_templates/navdirective.html
@@ -14,6 +14,7 @@
     <li class="navlink-container"><a ui-sref="es6">ES6</a></li>
     <li class="navlink-container"><a ui-sref="misc">MISC</a></li>
     <li class="navlink-container"><a ui-sref="gsap">GSAP</a></li>
+    <li class="navlink-container"><a ui-sref="grid">GRID</a></li>
 
   </ul>
 </nav>
