--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 <script src="./states/es6/es6Ctrl.js"></script>
 <script src="./states/svg/svgCtrl.js"></script>
 <script src="./states/gsap/gsapCtrl.js"></script>
+<script src="./states/grid/gridCtrl.js"></script>
 
   </body>
 </html>
