--- a/states/home/home.html
+++ b/states/home/home.html
@@ -28,7 +28,7 @@ My intent is to motivate and to help others who--like me--struggle with learning
 
 
 
-<h6 class="sm chtitle">No claim of copyright nor of expertise nor creativity for that matter. :) --On the contrary, please use it in your own study! Follow the exercises & the links provided! Be patient and painstaking. <br>Tweet @ me <span class=""><a target="_blank" href="https://twitter.com/beau_dev">🐦</a></span></h6>
+<h6 class="sm chtitle dkorange">No claim of copyright (nor of expertise nor creativity for that matter.) On the contrary, please use it in your own study! Follow the exercises & the links provided! Be patient and painstaking. <br>Tweet @ me <span class=""><a target="_blank" href="https://twitter.com/beau_dev">🐦</a></span></h6>
 </pre>
 
 
