--- a/states/journal/journal.html
+++ b/states/journal/journal.html
@@ -18,6 +18,22 @@
     </ol>
     <hr />
   -->
+  <h2 class="date">Day June 10th, 2017</h2>
+  <h4 class="sleep">Slept: 6 hours</h4><br><br>
+  <h3 class="subtitle">Had a revelation about a project in CSS. It will require 3 weeks-ish to put together. It will require another view to be added to codejournal: css-grid. The views in the nav-bar are too many and unwieldy. It's time to further separate those concerns & modularize that puppy! Will get to work on that today & deploy soon!
+<br>
+  <h5><br />Question: Am I putting off saving all of these notes into a postgres db? <br>Answer: "Yes, probably" <br>Reason: "I'm scared of breaking shit." <br />Retort: "Fear of breaking shit prevents growth. Breaking shit is how you learn. Breaking shit is why you are here!"<br />Conclusion: "I'll get into it this weekend" <br /> Reflection: "Now is the time to learn & break shit so it don't get broke in production." <br>Advice: "Start small and iterate over it...and stop swearing so much"</h5></h3>
+
+  <br>
+  <h3>To do:</h3>
+  <ol class="todo">
+    <li>CSS GRID</li>
+  </ol><br>
+  <h3>Done: </h3>
+  <ol class="done">
+    <li>Asked Petr Tichy about a real load script for loading images while loader animation runs <img class="w20 shadn" src="./img/loadscript.png" alt="try Imagesloaded"></li>
+  </ol>
+  <hr />
   <h2 class="date">Day June 9th, 2017</h2>
   <h4 class="sleep">Slept: 6 hours</h4><br><br>
   <h3 class="subtitle">Exhausted but I'm still in the game. Cannot stop thinking of this codedrops demo <a href="https://tympanus.net/Development/FolderPreviewIdeas/" target="_blank">and how I'd make it differently.</a> It kind of haunts me. <br>
